--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/characters/sword_skeleton/state_machine/SkeletonStateMachine.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scripts/state_machine/templates/", "res://scenes/", "res://scenes/pause_menu/", "res://scenes/object/", "res://scenes/main_menu/", "res://scenes/level/", "res://scenes/game_over_menu/", "res://scenes/characters/", "res://scenes/characters/sword_skeleton/", "res://scenes/characters/sword_skeleton/state_machine/", "res://scenes/characters/spear_skeleton/state_machine/", "res://scenes/characters/shield_skeleton/state_machine/", "res://scenes/characters/player/", "res://art/", "res://art/characters/shield/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/state_machine/state.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scripts/state_machine/templates/", "res://scenes/", "res://scenes/test/", "res://scenes/main_menu/", "res://scenes/level/", "res://scenes/game_over_menu/", "res://scenes/components/", "res://scenes/components/Hitbox/", "res://scenes/characters/", "res://scenes/characters/sword_skeleton/", "res://scenes/characters/spear_skeleton/state_machine/", "res://scenes/characters/slime/", "res://scenes/characters/shield_skeleton/state_machine/", "res://scenes/characters/player/", "res://art/", "res://art/characters/shield/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/test/test.tscn", "res://scenes/characters/player/player.tscn")
-current_scene="res://scenes/characters/player/player.tscn"
-center_split_offset=-674
+open_scenes=PackedStringArray("res://scenes/main_menu/MainMenu.tscn", "res://scenes/level/level.tscn", "res://scenes/test/test.tscn", "res://scenes/characters/player/player.tscn", "res://scenes/characters/sword_skeleton/sword_skeleton.tscn")
+current_scene="res://scenes/characters/sword_skeleton/sword_skeleton.tscn"
+center_split_offset=-442
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/characters/player/state_machine/Attack.gd", "res://scenes/characters/player/state_machine/Idle.gd", "res://scenes/characters/player/player.gd", "res://scenes/test/test.gd"]
-selected_script="res://scenes/characters/player/state_machine/Idle.gd"
-open_help=["Vector2"]
+open_scripts=["res://scripts/state_machine/templates/Attack.gd", "res://scripts/state_machine/templates/Follow.gd", "res://scripts/state_machine/templates/Hit.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scripts/state_machine/templates/Idle.gd", "res://scenes/level/level.gd", "res://scenes/characters/sword_skeleton/Line.gd", "res://scenes/main_menu/MainMenu.gd", "res://scenes/characters/player/player.gd", "res://scripts/state_machine/templates/PreAttack.gd", "res://scripts/state_machine/state.gd", "res://scenes/characters/sword_skeleton/sword_skeleton.gd", "res://scenes/test/test.gd"]
+selected_script="res://scripts/state_machine/templates/PreAttack.gd"
+open_help=["CanvasItem", "Node2D"]
 script_split_offset=243
 list_split_offset=0
 
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
