--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/state_machine/state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scenes/", "res://scenes/test/", "res://scenes/main_menu/", "res://scenes/level/", "res://scenes/game_over_menu/", "res://scenes/components/", "res://scenes/characters/", "res://scenes/characters/spear_skeleton/", "res://scenes/characters/spear_skeleton/state_machine/", "res://scenes/characters/slime/", "res://scenes/characters/shield_skeleton/state_machine/", "res://scenes/characters/player/", "res://scenes/characters/player/state_machine/", "res://art/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/test/test.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scenes/", "res://scenes/test/", "res://scenes/level/", "res://scenes/game_over_menu/", "res://scenes/characters/", "res://scenes/characters/spear_skeleton/state_machine/", "res://scenes/characters/shield_skeleton/state_machine/", "res://scenes/characters/player/", "res://scenes/characters/player/state_machine/", "res://art/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/level/level.tscn", "res://scenes/test/test.tscn", "res://scenes/characters/player/player.tscn", "res://scenes/characters/slime/slime.tscn", "res://scenes/characters/spear_skeleton/spear_skeleton.tscn", "res://scripts/state_machine/templates/Hit.tscn")
-current_scene="res://scenes/test/test.tscn"
+open_scenes=PackedStringArray("res://scenes/main_menu/MainMenu.tscn", "res://scenes/level/level.tscn", "res://scenes/characters/player/player.tscn", "res://scripts/state_machine/templates/Attack.tscn", "res://scenes/components/Hitbox/Hitbox.tscn", "res://scenes/test/test.tscn", "res://scenes/characters/sword_skeleton/sword_skeleton.tscn")
+current_scene="res://scenes/main_menu/MainMenu.tscn"
 center_split_offset=-442
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/state_machine/templates/Attack.gd", "res://scenes/characters/player/state_machine/Attack.gd", "res://scenes/characters/slime/state_machine/Attack_2.gd", "res://scenes/characters/spear_skeleton/CollisionShape2D.gd", "res://scripts/state_machine/templates/Dead.gd", "res://scenes/characters/spear_skeleton/state_machine/Dead.gd", "res://scenes/characters/player/state_machine/Dead.gd", "res://scripts/global.gd", "res://scripts/state_machine/templates/Hit.gd", "res://scenes/characters/player/state_machine/Hit.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scenes/components/Hurtbox/Hurtbox.gd", "res://scenes/characters/player/state_machine/Idle.gd", "res://scenes/characters/player/player.gd", "res://scripts/state_machine/templates/PreAttack.gd", "res://scenes/characters/slime/slime.gd", "res://scenes/characters/spear_skeleton/state_machine/SpearSkelStateMachine.gd", "res://scenes/characters/spear_skeleton/spear_skeleton.gd", "res://scripts/state_machine/state.gd", "res://scripts/state_machine/state_machine.gd", "res://scenes/test/test.gd", "res://scenes/characters/player/state_machine/Walk.gd"]
-selected_script="res://scenes/test/test.gd"
+open_scripts=["res://scripts/state_machine/templates/Attack.gd", "res://scripts/global.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scenes/level/level.gd", "res://scenes/characters/sword_skeleton/Line.gd", "res://scenes/main_menu/MainMenu.gd", "res://scenes/characters/player/player.gd", "res://scenes/characters/sword_skeleton/sword_skeleton.gd", "res://scenes/test/test.gd"]
+selected_script="res://scenes/main_menu/MainMenu.gd"
 open_help=[]
 script_split_offset=243
 list_split_offset=0
